# LabForCode

./: .dockerignore  .gitignore  .nixpacks.toml  .railwayignore  DEPLOY-RAILWAY.md  DEPLOYMENT.md  DISCLAIMER.md  DOCKER-SETUP.md  Dockerfile  Dockerfile.local  Dockerfile.production  LICENSE  RAILWAY-FIX.md  README.md  deploy-production.bat  deploy-production.sh  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  docker-java-only.yml  init-postgres.sql  init.sql  next.config.mjs  package.json  pnpm-lock.yaml  railway.json  setup-local-compilers-clean.ps1  start-windows.bat  startup.sh  test-api.sh  test-local-compilers.js
app/: page.tsx
app/admin/: page.tsx
app/api/about/: route.ts
app/api/authenticate/: route.ts
app/api/authorize/: route.ts
app/api/config_info/: route.ts
app/api/debug/: route.ts
app/api/health/: route.ts
app/api/isolate/: route.ts
app/api/languages/: route.ts
app/api/license/: route.ts
app/api/share/: route.ts
app/api/statistics/: route.ts
app/api/statuses/: route.ts
app/api/submissions/: route-new.ts  route.ts
app/api/system_info/: route.ts
app/api/version/: route.ts
app/share/[id]/: page.tsx
components/: error-boundary.tsx  execution-panel.tsx  history-panel.tsx  monaco-editor.tsx  share-dialog.tsx  simple-editor.tsx
lib/: database.ts  executor.ts  queue.ts  rate-limit.ts  rust-engine-client.ts  webhook.ts
rust-engine/: Cargo.toml  Dockerfile  README.md
rust-engine/src/: engine.rs  executor.rs  main.rs  queue.rs  sandbox.rs  types.rs
scripts/: start-production.bat  start-production.sh
(+11 files in other folders)
